fix list.of in ICommand